# ActivityRegisterProject

./: Activity.cpp  Activity.h  ActivityRegister.cpp  ActivityRegister.h  CMakeLists.txt  README.md  main.cpp
Test/: ActivityFixture.cpp  ActivityRegisterFixture.cpp  ActivityRegisterTest.cpp  ActivityTest.cpp  CMakeLists.txt  runAllTests.cpp
Test/Lib/googletest/: CMakeLists.txt
